# Work_SMT

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  SMT产线项目.md  SMT双项目Docker与单实例可靠性实际改进方案.md  SMT双项目生产化改进方案.md  SMT双项目联调与压力测试报告.md  agent.md  代码注释规范.md
01_SMT_DataStream/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
01_SMT_DataStream/conf/: collector.env  collector.example.json  datastream.env  datastream.example.json  datastream.json  datastream.production.example.json
01_SMT_DataStream/data/: README.md
01_SMT_DataStream/deploy/logrotate/: smt-datastream
01_SMT_DataStream/deploy/nginx/: datastream.conf
01_SMT_DataStream/deploy/systemd/: smt-collector.service  smt-datastream.service
01_SMT_DataStream/docs/: 01_开发思路.md  02_模拟业务基线.md  03_实际业务差距与改进思路.md  04_编码前准备.md  05_数据与状态模型.md  07_openapi.yaml  09_分期实施计划.md  11_第一期开发报告.md  12_第二期开发报告.md  13_第三期开发报告.md  16_第六期暨终板验收报告.md  17_部署与运维手册.md  19_核心调用链与面试演示.md  20_简历能力与代码证据矩阵.md  21_学习与面试准备路线.md  22_面试回答参考.md  API契约.md  openapi.yaml  分期实施计划.md  学习与面试准备路线.md  实际业务差距与改进思路.md  开发思路.md  故障演练与排查.md  数据与状态模型.md  本机环境检查.md  核心调用链与面试演示.md  第一期开发报告.md  第三期开发报告.md  第二期开发报告.md  第五期开发报告.md  第六期暨终板验收报告.md  第四期开发报告.md  简历能力与代码证据矩阵.md  编码前准备.md  部署与运维手册.md  采集端与文件生命周期契约.md
01_SMT_DataStream/migrations/: 000_schema_migration.sql  001_initial_schema.sql  002_fct_collector_binding.sql  dev_seed.sql
01_SMT_DataStream/scripts/: acceptance.sh  backup.sh  build.sh  coverage.sh  db.sh  health_check.sh  quality.sh  run.sh  sanitizer.sh  stop.sh  valgrind.sh  verify_backup.sh
01_SMT_DataStream/src/: main.cpp
01_SMT_DataStream/src/api/: archive_controller.cpp  health_controller.cpp  heartbeat_controller.cpp  upload_controller.cpp
01_SMT_DataStream/src/archive/: archive_model.cpp  archive_repository.cpp  archive_storage.cpp
01_SMT_DataStream/src/auth/: crypto.cpp  device_authenticator.cpp  operator_authenticator.cpp
01_SMT_DataStream/src/cleanup/: cleanup_service.cpp
01_SMT_DataStream/src/collector/: collector_app.cpp  collector_config.cpp  http_uploader.cpp  main.cpp  spool_store.cpp
01_SMT_DataStream/src/common/: api_response.cpp  archive_cursor.cpp  logging.cpp  request_id.cpp  time_utils.cpp  uri_utils.cpp  uuid.cpp  validation.cpp
01_SMT_DataStream/src/config/: app_config.cpp
01_SMT_DataStream/src/device/: device_repository.cpp  heartbeat.cpp
01_SMT_DataStream/src/server/: datastream_server.cpp
01_SMT_DataStream/src/storage/: mysql_client.cpp  redis_client.cpp  storage_paths.cpp
01_SMT_DataStream/src/upload/: upload_model.cpp  upload_repository.cpp
01_SMT_DataStream/tests/: CMakeLists.txt
01_SMT_DataStream/tests/e2e/: collector_e2e_test.py  heartbeat_e2e_test.py  mock_archive_e2e_test.py  upload_e2e_test.py
01_SMT_DataStream/tests/http_load/: http_load_test.py
01_SMT_DataStream/tests/integration/: clients_test.cpp
01_SMT_DataStream/tests/unit/: api_response_test.cpp  app_config_test.cpp  archive_cursor_test.cpp  archive_storage_test.cpp  cleanup_service_test.cpp  collector_config_test.cpp  crypto_test.cpp  heartbeat_test.cpp  operator_authenticator_test.cpp  spool_store_test.cpp  storage_paths_test.cpp  time_utils_test.cpp  upload_model_test.cpp  upload_repository_test.cpp  uri_utils_test.cpp  uuid_test.cpp
01_SMT_DataStream/tools/: generate_mock_data.py  simulate_device_lifecycle.py
02_SMT_LogTrace/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
02_SMT_LogTrace/conf/: logtrace.env.example  logtrace.json  logtrace.production.json
02_SMT_LogTrace/data/: README.md
02_SMT_LogTrace/deploy/logrotate/: smt-logtrace
02_SMT_LogTrace/deploy/nginx/: logtrace.conf
02_SMT_LogTrace/deploy/systemd/: smt-logsearch.service  smt-logtrace-gateway.service
02_SMT_LogTrace/docs/: 01_开发思路.md  02_模拟业务基线.md  03_实际业务差距与改进思路.md  04_编码前准备.md  05_数据与索引模型.md  06_HTTP与RPC契约.md  07_openapi.yaml  08_日志格式与解析契约.md  09_分期实施计划.md  10_本机环境检查.md  11_第一期开发报告.md  12_第二期开发报告.md  13_第三期开发报告.md  14_第四期开发报告.md  15_第五期开发报告.md  16_第六期暨终板验收报告.md  17_部署与运维手册.md  18_故障演练与排查.md  19_核心调用链与面试演示.md  20_简历能力与代码证据矩阵.md  21_学习与面试准备路线.md  22_面试回答参考.md  23_项目完整技术说明.md
02_SMT_LogTrace/migrations/: 000_schema_migration.sql  001_initial_schema.sql  002_parsed_batch.sql  003_ready_segment.sql  dev_seed.sql
02_SMT_LogTrace/proto/: logtrace.proto
02_SMT_LogTrace/scripts/: acceptance.sh  backup.sh  build.sh  coverage.sh  db.sh  health_check.sh  quality.sh  run.sh  sanitizer.sh  stop.sh  valgrind.sh  verify_backup.sh
02_SMT_LogTrace/src/: admin_main.cpp  gateway_main.cpp  search_main.cpp
02_SMT_LogTrace/src/api/: health_controller.cpp  search_controller.cpp
02_SMT_LogTrace/src/auth/: operator_authenticator.cpp
02_SMT_LogTrace/src/cache/: query_cache.cpp
02_SMT_LogTrace/src/common/: api_response.cpp  logging.cpp  request_id.cpp  sha256.cpp  time_utils.cpp  uri_utils.cpp
02_SMT_LogTrace/src/config/: app_config.cpp
02_SMT_LogTrace/src/indexing/: archive_parser.cpp  archive_source_repository.cpp  incremental_indexer.cpp  index_snapshot.cpp  index_state_repository.cpp  index_worker.cpp  original_log_reader.cpp  parsed_batch_reader.cpp  parsed_batch_writer.cpp  segment_manager.cpp  segment_store.cpp  term_tokenizer.cpp
02_SMT_LogTrace/src/rpc/: search_health_service.cpp  search_rpc_client.cpp
02_SMT_LogTrace/src/search/: search_engine.cpp
02_SMT_LogTrace/src/server/: logsearch_server.cpp  logtrace_gateway.cpp
02_SMT_LogTrace/src/storage/: mysql_client.cpp  redis_client.cpp  storage_paths.cpp
02_SMT_LogTrace/tests/: CMakeLists.txt
02_SMT_LogTrace/tests/e2e/: cross_project_e2e_test.py  health_e2e_test.py  indexing_e2e_test.py
02_SMT_LogTrace/tests/integration/: clients_test.cpp
02_SMT_LogTrace/tests/performance/: search_load_test.cpp
02_SMT_LogTrace/tests/unit/: api_response_test.cpp  app_config_test.cpp  archive_parser_test.cpp  operator_authenticator_test.cpp  parsed_batch_writer_test.cpp  proto_contract_test.cpp  query_cache_test.cpp  search_engine_test.cpp  segment_store_test.cpp  slru_cache_test.cpp  storage_paths_test.cpp  (+2 more)
02_SMT_LogTrace/tools/: generate_phase2_samples.py
(+166 files in other folders)
